--- a/README
+++ b/README
@@ -4,7 +4,8 @@ Autoconf Macro Archive
 -----------------------------------------------------------------
 
 :Macro Index:     `By Category <macros-by-category.html>`_
-:Latest Release:  autoconf-archive-2007-02-14.tar.bz2_
+:Latest Release:  autoconf-archive-2007-02-19.tar.bz2_
+:GIT Repository:  git_ clone http://autoconf-archive.cryp.to/.git
 
 -----------------------------------------------------------------
 
@@ -75,11 +76,13 @@ Copyleft
 .. References used in the text above
 .. .................................
 
+.. _git: http://git.or.cz/
+
 .. _Autoconf: http://www.gnu.org/software/autoconf/
 
 .. _Automake: http://sources.redhat.com/automake/
 
-.. _autoconf-archive-2007-02-14.tar.bz2: http://autoconf-archive.cryp.to/autoconf-archive-2007-02-14.tar.bz2
+.. _autoconf-archive-2007-02-19.tar.bz2: http://autoconf-archive.cryp.to/autoconf-archive-2007-02-19.tar.bz2
 
 .. _OSI: http://www.opensource.org/
 
