--- a/README
+++ b/README
@@ -3,9 +3,9 @@ Autoconf Macro Archive
 
 -----------------------------------------------------------------
 
-:Macro Index:     `By Category <macros-by-category.html>`_
-:Latest Release:  autoconf-archive-2007-02-19.tar.bz2_
-:GIT Repository:  git_ clone http://autoconf-archive.cryp.to/.git
+:Macro Index:    `By Category <macros-by-category.html>`_
+:Latest Release: autoconf-archive-2007-02-19.tar.bz2_
+:GIT Repository: git_ clone http://autoconf-archive.cryp.to/.git/
 
 -----------------------------------------------------------------
 
