Don't hyperlink to the GIT repository: there's no web front-end installed.

--- a/README
+++ b/README
@@ -1,13 +1,13 @@
 Autoconf Macro Archive
 ======================
 
------------------------------------------------------------------
+---------------------------------------------------------------------
 
 :Macro Index:    `By Category <macros-by-category.html>`_
 :Latest Release: autoconf-archive-2007-02-19.tar.bz2_
-:GIT Repository: git_ clone http://autoconf-archive.cryp.to/.git/
+:GIT Repository: git_ clone \http://autoconf-archive.cryp.to/.git/
 
------------------------------------------------------------------
+---------------------------------------------------------------------
 
 Synopsis
 --------
