ax_boost_test_exec_monitor.m4: New submission from Dodji Seketeli.

--- a/AUTHORS
+++ b/AUTHORS
@@ -93,6 +93,7 @@ Autoconf Macro Contributors
   Graeme S. Roy <graeme@epc.co.uk>
   Gerald Point <Gerald.Point@labri.fr>
   Don Anderson <dda@sleepycat.com>
+  Dodji Seketeli <dodji@seketeli.org>
   David Cluytens
   Dave Benson <daveb@ffem.org>
   Daniel Amelang <dan@amelang.net>
