Added submissions from Dustin J. Mitchell <dustin@zmanda.com>: AC_CHECK_DOCBOOK_DTD, AC_CHECK_DOCBOOK_XSLT, and AC_PROG_XSLTPROC.

--- a/AUTHORS
+++ b/AUTHORS
@@ -33,11 +33,13 @@ Autoconf Macro Contributors
   Dustin Mitchell <dustin@cs.uchicago.edu>
   Caolan McNamara <caolan@skynet.ie>
   Braden McDaniel <braden@endoframe.com>
+  Zmanda Inc. http://www.zmanda.com/
   Wes Hardaker <wjhardaker@ucdavis.edu>
   Tim Toolan <toolan@ele.uri.edu>
   Patrick Mauritz <oxygene@studentenbude.ath.cx>
   Moritz Sinn <moritz@freesources.org>
   Mark Elbrecht <snowball3@bigfoot.com>
+  Dustin J. Mitchell <dustin@zmanda.com>
   Duncan Simpson <dps@simpson.demon.co.uk>
   Devin Weaver <ktohg@tritarget.com>
   Akos Maroy <darkeye@tyrell.hu>
