--- a/README
+++ b/README
@@ -1,13 +1,14 @@
 Autoconf Macro Archive
 ======================
 
----------------------------------------------------------------------
+-------------------------------------------------------------------------------
 
 :Macro Index By:  Category_ ; Author_
-:Latest Release:  autoconf-archive-2007-05-10.tar.bz2_ ; `RSS Feed`_
+:Latest Release:  autoconf-archive-2007-05-10.tar.bz2_
+:Change History:  `ATOM Log`_ ; `RSS Feed`_
 :GIT Repository:  git_ clone \http://autoconf-archive.cryp.to/.git
 
----------------------------------------------------------------------
+-------------------------------------------------------------------------------
 
 Synopsis
 --------
@@ -83,6 +84,8 @@ Copyleft
 .. _git: http://git.or.cz/
 
 .. _RSS Feed: http://git.cryp.to/?p=autoconf-archive;a=rss
+
+.. _ATOM Log: http://git.cryp.to/?p=autoconf-archive;a=atom
 
 .. _Autoconf: http://www.gnu.org/software/autoconf/
 
