There is an error at line:
 | if test "$ax_flag" = "not found" ; then

in ax_f90_module_flag.m4. It should read:

 if test "$ax_f90_modflag" = "not found" ; then

--- a/AUTHORS
+++ b/AUTHORS
@@ -60,6 +60,7 @@ Autoconf Macro Contributors
   Egon Willighagen <e.willighagen@science.ru.nl>
   Dean Povey <povey@wedgetail.com>
   Daniel Richard G. <skunk@iskunk.org>
+  Alexander Pletzer <pletzer@txcorp.com>
   raf <raf@raf.org>
   William Fulton <wsf@fultondesigns.co.uk>
   Vaclav Slavik <vaclav.slavik@matfyz.cz>
