Use consistent author attribution for Zmanda Inc.

--- a/AUTHORS
+++ b/AUTHORS
@@ -29,7 +29,7 @@ Autoconf Macro Contributors
   Scott Pakin <pakin@uiuc.edu>
   Matteo Frigo
   Alain BARBET <alian@cpan.org>
-  Zmanda Inc. http://www.zmanda.com/
+  Zmanda Inc. <http://www.zmanda.com/>
   Mateusz Loskot <mateusz@loskot.net>
   Dustin Mitchell <dustin@cs.uchicago.edu>
   Dustin J. Mitchell <dustin@zmanda.com>
