--- a/AUTHORS
+++ b/AUTHORS
@@ -76,6 +76,7 @@ Autoconf Macro Contributors
   Perceval ANICHINI <perceval.anichini@epita.fr>
   Paul Gilmartin <pg@sweng.stortek.com>
   Oren Ben-Kiki <oren@ben-kiki.org>
+  Noah Slater <nslater@bytesexual.org>
   Nick Markham <markhn@rpi.edu>
   Nic Ferrier <nferrier@tapsellferrier.co.uk>
   Neil Ferguson <nferguso@eso.org>
