AX_BOOST_*, AX_PYTHON: Michael Tindal's e-mail address is invalid.
The address <mtindal@paradoxpoint.com> no longer works because the
domain name paradoxpoint.com appears to have expired. If anyone knows
how to reach Michael these days, please let me know. Thanks to Mikael
Lepistö for bringing this problem to my attention.

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,7 +16,7 @@ Autoconf Macro Contributors
   Steven G. Johnson <stevenj@alum.mit.edu>
   Bruce Korb <bkorb@gnu.org>
   Stephane Bortzmeyer <bortzmeyer@pasteur.fr>
-  Michael Tindal <mtindal@paradoxpoint.com>
+  Michael Tindal
   Loic Dachary <loic@senga.org>
   Andrew Collier <colliera@ukzn.ac.za>
   Alexandre Duret-Lutz <adl@gnu.org>
