AX_TLS: initial version
The attached macro attempts to detect compiler support for TLS
storage class extensions and how to use that extension. It then
defines the macro TLS to the keyword it found.

--- a/AUTHORS
+++ b/AUTHORS
@@ -114,3 +114,4 @@ Autoconf Macro Contributors
   Angus Lees <gusl@cse.unsw.edu.au>
   Andreas Schwab <schwab@suse.de>
   Alexandre Oliva
+  Alan Woodland <ajw05@aber.ac.uk>
