AUTHORS, README: updated for release 2007-07-26

--- a/AUTHORS
+++ b/AUTHORS
@@ -67,12 +67,15 @@ Autoconf Macro Contributors
   Tal Shalif <tal@shalif.com>
   Sven Verdoolaege <skimo*liacs.nl>
   Steven Brown <swbrown@variadic.org>
+  Stepan Kasal <skasal@redhat.com>
   Soren Andersen <somian *AT* pobox |DOT| com>
   Scott Grosch <Scott.Grosch@intel.com>
+  Ryan McCabe <ryan@numb.org>
   Russ Allbery <rra@stanford.edu>
   Ruben Fonseca <fonseka@gmail.com>
   Ronald Landheer-Cieslak <blytkerchan@users.sourceforge.net>
   Robert White <kranki@mac.com>
+  Pete Greenwell <pete@mu.org>
   Perceval ANICHINI <perceval.anichini@epita.fr>
   Paul Gilmartin <pg@sweng.stortek.com>
   Oren Ben-Kiki <oren@ben-kiki.org>
