ax_c___attribute__.m4: dropped invalid e-mail address
Christian Haggstrom's e-mail address chm@c00.info is unreachable.

--- a/AUTHORS
+++ b/AUTHORS
@@ -107,7 +107,7 @@ Autoconf Macro Contributors
   Dale K. Hawkins <dhawkins@cdrgts.com>
   Christopher Currie <christopher@currie.com>
   Christian Toepp <c.toepp@gmail.com>
-  Christian Haggstrom <chm@c00.info>
+  Christian Haggstrom
   Can Bican <bican@yahoo.com>
   Bill Poser <billposer@alum.mit.edu>
   Bernardo Innocenti
