--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Autoconf Macro Archive
 -------------------------------------------------------------------------------
 
 :Macro Index By:  Category_ ; Author_
-:Latest Release:  autoconf-archive-2007-07-28.tar.bz2_
+:Latest Release:  autoconf-archive-2007-07-29.tar.bz2_
 :Change History:  `ATOM Log`_ ; `RSS Feed`_
 :GIT Repository:  git_ clone \http://autoconf-archive.cryp.to/.git
 
@@ -65,10 +65,12 @@ How To Contribute
 Copyleft
 --------
 
- Compilation Copyright (c) 2007 by Peter Simons
- <simons@cryp.to>. The Autoconf Macro Archive is
- licensed according to the terms of the `GNU General Public
- License <http://www.gnu.org/licenses/gpl.html>`_.
+ Compilation Copyright (c) 2007 by Peter Simons <simons@cryp.to>.
+ The Autoconf Macro Archive is free software: you can
+ redistribute it and/or modify it under the terms of the `GNU
+ General Public License version 3
+ <http://www.gnu.org/licenses/gpl.html>`_ or (at your option) any
+ later version.
 
  All macros are copyrighted by their respective authors.
  Please refer to the individual files for details.
@@ -91,7 +93,7 @@ Copyleft
 
 .. _Automake: http://sources.redhat.com/automake/
 
-.. _autoconf-archive-2007-07-28.tar.bz2: http://autoconf-archive.cryp.to/autoconf-archive-2007-07-28.tar.bz2
+.. _autoconf-archive-2007-07-29.tar.bz2: http://autoconf-archive.cryp.to/autoconf-archive-2007-07-29.tar.bz2
 
 .. _OSI: http://www.opensource.org/
 
