AC_CXX_HAVE_EXT_HASH_MAP, AC_PATH_GENERIC, AC_PATH_LIB: remove invalid e-mail
The e-mail addresses listed for Perceval Anichini and Angus Lees no longer
work. If anyone knows how to reach them, please let me know.

--- a/AUTHORS
+++ b/AUTHORS
@@ -76,7 +76,7 @@ Autoconf Macro Contributors
   Ronald Landheer-Cieslak <blytkerchan@users.sourceforge.net>
   Robert White <kranki@mac.com>
   Pete Greenwell <pete@mu.org>
-  Perceval ANICHINI <perceval.anichini@epita.fr>
+  Perceval ANICHINI
   Paul Gilmartin <pg@sweng.stortek.com>
   Oren Ben-Kiki <oren@ben-kiki.org>
   Noah Slater <nslater@bytesexual.org>
@@ -114,7 +114,7 @@ Autoconf Macro Contributors
   Ben Stanley <Ben.Stanley@exemail.com.au>
   Ben Bergen <ben@cs.fau.de>
   Bastiaan Veelo <Bastiaan@Veelo.net>
-  Angus Lees <gusl@cse.unsw.edu.au>
+  Angus Lees
   Andreas Schwab <schwab@suse.de>
   Alexandre Oliva
   Alan Woodland <ajw05@aber.ac.uk>
