Use author attribution "Dustin J. Mitchell" consistently.

--- a/AUTHORS
+++ b/AUTHORS
@@ -31,8 +31,8 @@ Autoconf Macro Contributors
   Alain BARBET <alian@cpan.org>
   Zmanda Inc. <http://www.zmanda.com/>
   Mateusz Loskot <mateusz@loskot.net>
-  Dustin Mitchell <dustin@cs.uchicago.edu>
   Dustin J. Mitchell <dustin@zmanda.com>
+  Dustin J. Mitchell <dustin@cs.uchicago.edu>
   Caolan McNamara <caolan@skynet.ie>
   Braden McDaniel <braden@endoframe.com>
   Wes Hardaker <wjhardaker@ucdavis.edu>
