New macros to test for various assemblers, like nasm, yasm, etc.

--- a/AUTHORS
+++ b/AUTHORS
@@ -13,6 +13,7 @@ Autoconf Macro Contributors
   Tom Howard
   Thomas Porschberg
   Gleen Salmon
+  Bogdan Drozdowski
   Steven G. Johnson
   Bruce Korb
   Stephane Bortzmeyer
