--- a/AUTHORS
+++ b/AUTHORS
@@ -25,14 +25,15 @@ Autoconf Macro Contributors
   Warren Young
   Sebastian Huber
   Rafael Laboissiere
+  Mateusz Loskot
   Ludovic Courtès
   Alan W. Irwin
   Ville Laurikari
   Scott Pakin
   Matteo Frigo
-  Mateusz Loskot
   Alain BARBET
   Zmanda Inc.
+  Christophe Tournayre
   Caolan McNamara
   Braden McDaniel
   Wes Hardaker
