ACX_BLAS_F77_FUNC, ACX_BLAS_WITH_F77_FUNC: initial submission
Both macros were tested on a machine with gfortran but
g77-compiled (system-supplied) BLAS and worked as expected.

--- a/AUTHORS
+++ b/AUTHORS
@@ -96,6 +96,7 @@ Autoconf Macro Contributors
   Kaveh Ghazi
   Kaelin Colclasure
   John Darrington
+  Jaroslav Hajek
   Ilguiz Latypov
   Graeme S. Roy
   Gerald Point
