AC_CXX_*: added various macros for testing C++98 and C++TR1 compliance
Benjamin Kosnik kindly submitted his macro collection from libstdc++,

  http://gcc.gnu.org/onlinedocs/libstdc++/manual/backwards.html#backwards.third

..., for inclusion in the archive.

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,7 @@ Autoconf Macro Contributors
   Gleen Salmon
   Steven G. Johnson
   Bruce Korb
+  Benjamin Kosnik
   Stephane Bortzmeyer
   Michael Tindal
   Mateusz Loskot
