AUTHORS: updated after recent submissions

--- a/AUTHORS
+++ b/AUTHORS
@@ -45,6 +45,7 @@ Autoconf Macro Contributors
   Patrick Mauritz
   Moritz Sinn
   Mark Elbrecht
+  Fabien Coelho
   Devin Weaver
   Akos Maroy
   YAMAMOTO Kengo
@@ -77,6 +78,7 @@ Autoconf Macro Contributors
   Ruben Fonseca
   Ronald Landheer-Cieslak
   Robert White
+  Rhys Ulerich
   Rafal Rzepecki
   Pete Greenwell
   Perceval ANICHINI
