lua.m4: initial version

--- a/AUTHORS
+++ b/AUTHORS
@@ -69,6 +69,7 @@ Autoconf Macro Contributors
   raf
   William Fulton
   Vaclav Slavik
+  Tom Payne
   Tal Shalif
   Sven Verdoolaege
   Steven Brown
@@ -79,6 +80,7 @@ Autoconf Macro Contributors
   Ruben Fonseca
   Ronald Landheer-Cieslak
   Robert White
+  Reuben Thomas
   Rafal Rzepecki
   Pete Greenwell
   Perceval ANICHINI
@@ -88,6 +90,7 @@ Autoconf Macro Contributors
   Nick Markham
   Nic Ferrier
   Neil Ferguson
+  Matthieu Moy
   Marten Svantesson
   Mark R. Bannister
   Mark Pulford
