AX_PERL_EXT_FLAGS: embedding Perl into a project using Autotools

--- a/AUTHORS
+++ b/AUTHORS
@@ -91,6 +91,7 @@ Autoconf Macro Contributors
   Nic Ferrier
   Neil Ferguson
   Matthieu Moy
+  Mats Kindahl of Sun Microsystems
   Marten Svantesson
   Mark R. Bannister
   Mark Pulford
