AX_BOOST: added support for Wave
Updated macros due to link dependencies required in AC_CHECK_LIB.
AX_BOOST_FILESYSTEM requires the BOOST_SYSTEM library while
AX_BOOST_WAVE requires BOOST_THREAD_LIBRARY to link.

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,10 +16,10 @@ Autoconf Macro Contributors
   Bogdan Drozdowski
   Gleen Salmon
   Steven G. Johnson
+  Michael Tindal
   Bruce Korb
   Benjamin Kosnik
   Stephane Bortzmeyer
-  Michael Tindal
   Mateusz Loskot
   Dustin J. Mitchell
   Andrew Collier
@@ -79,6 +79,7 @@ Autoconf Macro Contributors
   Russ Allbery
   Ruben Fonseca
   Ronald Landheer-Cieslak
+  Roman Rybalko
   Robert White
   Reuben Thomas
   Rafal Rzepecki
