AX_C99_INLINE: initial version
The macro determines whether the "inline" keyword of a C99 compiler is
standards compliant or not.  I am using this macro support differences
between gcc 4.2 (and earlier) and gcc 4.3 (and later) when using the
"-std= c99" option.  It may also be useful for other compilers.  (For
details of the differences between the compiler versions refer to
http:// gcc.gnu.org/gcc-4.3/porting_to.html "Sematic change of extern
inline")

Example configure.ac:

  AC_INIT([foo], [0.1])
  AM_INIT_AUTOMAKE

  AC_PROG_CC
  AC_PROG_CC_C99
  if test "$ac_cv_prog_cc_c99" == "no"; then
    AC_MSG_ERROR([A C99 compiler is required.])
  fi

  AX_C99_INLINE

  AC_CONFIG_HEADERS([config.h])
  AC_CONFIG_FILES([Makefile])
  AC_OUTPUT

Example source file foo.h:

  #ifdef HAVE_C99_INLINE
  inline int myFunction(int a) { return a + 1; }
  #else
  static inline int myFunction(int a) { return a + 1; }
  #endif

Example source foo.c:

  extern inline int myFunction(int a);

--- a/AUTHORS
+++ b/AUTHORS
@@ -91,6 +91,7 @@ Autoconf Macro Contributors
   Nick Markham
   Nic Ferrier
   Neil Ferguson
+  Michael McMaster
   Matthieu Moy
   Mats Kindahl of Sun Microsystems
   Marten Svantesson
