AX_PROG_MD5SUM: initial version

--- a/AUTHORS
+++ b/AUTHORS
@@ -109,6 +109,7 @@ Autoconf Macro Contributors
   Ilguiz Latypov
   Graeme S. Roy
   Gerald Point
+  Gabriele Bartolini
   Don Anderson
   Dodji Seketeli
   Derek Price
