--- a/AUTHORS
+++ b/AUTHORS
@@ -10,9 +10,9 @@ Autoconf Macro Contributors
   Luc Maisonobe
   Guido U. Draheim
   Todd Veldhuizen
+  Tom Howard
   Thomas Porschberg
   Rhys Ulerich
-  Tom Howard
   Bogdan Drozdowski
   Gleen Salmon
   Steven G. Johnson
@@ -37,6 +37,7 @@ Autoconf Macro Contributors
   Matteo Frigo
   Christophe Tournayre
   Caolan McNamara
+  Allan Caffee
   Alain BARBET
   Zmanda Inc.
   Fabien Coelho
