--- a/AUTHORS
+++ b/AUTHORS
@@ -14,8 +14,8 @@ Autoconf Macro Contributors
   Thomas Porschberg
   Rhys Ulerich
   Bogdan Drozdowski
-  Gleen Salmon
   Steven G. Johnson
+  Gleen Salmon
   Michael Tindal
   Bruce Korb
   Benjamin Kosnik
@@ -31,10 +31,10 @@ Autoconf Macro Contributors
   Alan W. Irwin
   Warren Young
   Peter Simons
+  Matteo Frigo
   Ludovic Courtès
   Ville Laurikari
   Scott Pakin
-  Matteo Frigo
   Christophe Tournayre
   Caolan McNamara
   Allan Caffee
@@ -92,6 +92,7 @@ Autoconf Macro Contributors
   Nick Markham
   Nic Ferrier
   Neil Ferguson
+  Mike Frysinger
   Michael McMaster
   Matthieu Moy
   Mats Kindahl of Sun Microsystems
