README: Updated RSS and ATOM URLs for new gitweb version.

--- a/README
+++ b/README
@@ -67,9 +67,9 @@ individual files for details.
 
 .. _Git: http://git-scm.com/
 
-.. _RSS Feed: http://git.cryp.to/autoconf-archive?a=rss
+.. _RSS Feed: http://git.cryp.to/autoconf-archive/rss
 
-.. _ATOM Log: http://git.cryp.to/autoconf-archive?a=atom
+.. _ATOM Log: http://git.cryp.to/autoconf-archive/atom
 
 .. _Autoconf: http://www.gnu.org/software/autoconf/
 
