--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Autoconf Archive
 :Macro Index By:  Category_ ; Author_ ; License_
 :Latest Release:  autoconf-archive-2009-04-26.tar.bz2_
 :Change History:  `ATOM Log`_ ; `RSS Feed`_
-:GIT Repository:  git clone http://git.cryp.to/autoconf-archive
+:GIT Repository:  git clone git://git.sv.gnu.org/autoconf-archive.git
 
 -------------------------------------------------------------------------------
 
@@ -20,10 +20,9 @@ of the cause from all over the Internet.
 How To Contribute
 -----------------
 
-If you have written a macro and would like to share it, then please `e-mail
-the m4 file to me <mailto:simons@cryp.to>`_. In addition to the actual
-source code, your submission should also include the following bits of
-information:
+If you have written a macro that you'd like to submit for inclusion in the
+archive, then please post the m4 source code to the `patch tracker`_.
+Furthermore, we'll also need the following bits of information:
 
 * A synopsis that shows how the macro must be be called.
 
@@ -33,12 +32,24 @@ information:
 
 * Licensing information.
 
-You can submit your macro under any `GPL-compatible free software
-license`_, but the best choice is the `all-permissive license`_ recommended
-by the Free Software Foundation.
+You can submit your macro under any `GPL-compatible free software license`_.
+The Free Software Foundation, however, recommends the `all-permissive
+license`_ for Autoconf macros.
 
-Another great way to contribute to the Archive is to submit patches. Git_
-patches are particularly welcome.
+Migration to Savannah
+---------------------
+
+The Autoconf Archive is now hosted on Savannah. Previously cloned Git
+repositories can be migrated to the new location by updating the settings
+for "origin" and "master"::
+
+  git config remote.origin.url 'git://git.sv.gnu.org/autoconf-archive.git'
+  git config remote.origin.fetch '+refs/heads/*:refs/remotes/origin/*'
+
+  git config branch.master.remote origin
+  git config branch.master.merge refs/heads/master
+
+Now, run `git pull` to update the master branch.
 
 License
 -------
@@ -57,7 +68,7 @@ individual files for details.
 .. References used in the text above
 .. .................................
 
-.. _Autoconf Archive: http://autoconf-archive.cryp.to/
+.. _Autoconf Archive: http://www.nongnu.org/autoconf-archive/
 
 .. _Category: macros-by-category.html
 
@@ -67,9 +78,9 @@ individual files for details.
 
 .. _Git: http://git-scm.com/
 
-.. _RSS Feed: http://git.cryp.to/autoconf-archive/rss
+.. _RSS Feed: http://git.savannah.gnu.org/gitweb/?p=autoconf-archive.git;a=rss
 
-.. _ATOM Log: http://git.cryp.to/autoconf-archive/atom
+.. _ATOM Log: http://git.savannah.gnu.org/gitweb/?p=autoconf-archive.git;a=atom
 
 .. _Autoconf: http://www.gnu.org/software/autoconf/
 
@@ -78,3 +89,5 @@ individual files for details.
 .. _GPL-compatible free software license: http://www.gnu.org/licenses/license-list.html
 
 .. _all-permissive license: http://www.gnu.org/prep/maintain/html_node/License-Notices-for-Other-Files.html
+
+.. _patch tracker: https://savannah.nongnu.org/patch/?func=additem&group=autoconf-archive
