--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-#+TITLE: Autoconf Archive TODO    -*- mode:org;coding:utf-8;fill-column:79; -*-
+#+TITLE: Autoconf Archive TODO                 -*- mode:org;fill-column:79; -*-
 
 * TODO Document our new mailing lists.
 
@@ -20,32 +20,6 @@
     This mailing list distributes an e-mail every time the 'master' branch has
     been changed in Git. Other branches, like 'maint', aren't tracked; there is
     only a moderate amount of traffic.
-
-
-* TODO Decide how to handle non-ASCII content in m4 files
-
-  Several macros contain non-ASCII characters, for example:
-
-  : $ grep@ Ludo m4/*.m4
-  : m4/_ac_c_ifdef.m4:#   Copyright (c) 2008 Ludovic CourtÃ¨s <ludo@chbouib.org>
-  : m4/ac_cxx_compiler_vendor.m4:#   Copyright (c) 2008 Ludovic CourtÃ¨s <ludo@chbouib.org>
-  : m4/ac_cxx_cppflags_std_lang.m4:#   Copyright (c) 2008 Ludovic CourtÃ¨s <ludo@chbouib.org>
-  : m4/ac_cxx_cxxflags_std_lang.m4:#   Copyright (c) 2008 Ludovic CourtÃ¨s <ludo@chbouib.org>
-  : m4/ac_cxx_ldflags_std_lang.m4:#   Copyright (c) 2008 Ludovic CourtÃ¨s <ludo@chbouib.org>
-  : m4/ac_libtoolize_cflags.m4:#   Copyright (c) 2008 Ludovic CourtÃ¨s <ludo@chbouib.org>
-
-  The encoding currently in use is "latin1", but the m4 files don't expose
-  that information. The situation can be improved as follows:
-
-  1) Add machine-readable charset declarations (i.e. for Emacs) to all m4
-     files. (Or just to those that actually use non-ASCII?)
-
-  2) Encode all files in UTF-8, like everyone else seems to do. (But add
-     charset declarations anyway?)
-
-  3) Restrict m4 files to ASCII.
-
-  Pure ASCII is my favorite.
 
 * TODO Figure out how to generate the AUTHORS file
 
